styling register page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
     <h1 class="display-4 text-white">Layover Living</h1>
     <p class="lead text-white">Beyond the flight deck, explore the unseen.</p>
     <div class="button-container d-flex justify-content-center mt-3">
-      <a href="/login" class="btn btn-primary m-2">Login</a>
-      <a href="/register" class="btn btn-secondary m-2">Register</a>
+      <a href="/login" id="login-btn" class="btn m-2">Login</a>
+      <a href="/auth/register" id="register-btn" class="btn m-2">Register</a>
     </div>
   </div>
 </div>
