--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
-<footer>
-  <p>© 2023 Layover Living</p>
+<footer class="footer mt-auto py-3 bg-dark text-white">
+  <div class="container text-center">
+    <p>© 2023 Layover Living</p>
+  </div>
 </footer>
