--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .background-image {
@@ -48,11 +52,35 @@ body {
   font-size: 1.5em;
 }
 
-.button {
+.btn {
   margin: 10px;
   padding: 10px 20px;
   font-size: 1.2em;
   border: none;
+}
+
+#login-btn {
   color: white;
   background-color: #337ab7;
+}
+
+#register-btn {
+  color: black;
+  background-color: #f5f5f5;
+}
+
+#login-btn:hover {
+  background-color: #286090;
+}
+
+#register-btn:hover {
+  background-color: #d3d3d3;
+}
+
+.page-content {
+  flex: 1 0 auto;
+}
+
+.footer {
+  flex-shrink: 0;
 }
