--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,43 @@
 <header>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <!-- Only show the following links if the user is logged in -->
-    <% if (locals.user) { %>
-    <a href="/logout">Logout</a>
-    <% } else { %>
-    <a href="/login">Login</a>
-    <a href="/register">Register</a>
-    <% } %>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Layover Living</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/features">Features</a>
+          </li>
+        </ul>
+
+        <ul class="navbar-nav">
+          <% if (locals.user) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+          <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register">Register</a>
+          </li>
+          <% } %>
+        </ul>
+      </div>
+    </div>
   </nav>
 </header>
