--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <h1 class="display-4 text-white">Layover Living</h1>
     <p class="lead text-white">Beyond the flight deck, explore the unseen.</p>
     <div class="button-container d-flex justify-content-center mt-3">
-      <a href="/login" id="login-btn" class="btn m-2">Login</a>
+      <a href="/auth/login" id="login-btn" class="btn m-2">Login</a>
       <a href="/auth/register" id="register-btn" class="btn m-2">Register</a>
     </div>
   </div>
