--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,57 +1,50 @@
 <%- include('partials/header') %>
 
-<div class="container mt-5">
-  <h1 class="text-center mb-4">Dashboard</h1>
-
-  <!-- User Profile Info -->
-  <div class="card mb-4">
-    <div class="card-header">Profile Info</div>
-    <div class="card-body">
-      <p class="card-text">
-        Your Name: <%= user.firstName %> <%= user.lastName %>
-      </p>
-      <p class="card-text">Username: <%= user.username %></p>
-      <p class="card-text">Email: <%= user.email %></p>
+<div class="background-image">
+  <div class="overlay container">
+    <h1 class="text-center mb-4 title">Explorer's Station</h1>
+    <hr />
+    <!-- Buttons -->
+    <div class="text-center mb-4">
+      <a href="/cities" class="btn btn-primary" id="view-layovers-btn"
+        >View All Layovers</a
+      >
+      <% if (user.isAdmin) { %>
+      <a href="/cities/add" class="btn btn-secondary" id="add-city-btn"
+        >Add New City</a
+      >
+      <% } %>
     </div>
-  </div>
 
-  <!-- Recent Activity -->
-  <div class="card mb-4">
-    <div class="card-header">Recent Activity</div>
-    <ul class="list-group list-group-flush">
-      <% user.recentPosts.forEach(function(post) { %>
-      <li class="list-group-item"><%= post.title %> - <%= post.date %></li>
-      <% }) %>
-    </ul>
-  </div>
+    <!-- User Profile Info -->
+    <div class="card mb-4 bg-transparent text-white">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-4">
+            <p class="card-text text-center fs-4">
+              Your Name: <%= user.firstName %> <%= user.lastName %>
+            </p>
+          </div>
+          <div class="col-md-4">
+            <p class="card-text text-center fs-4">
+              Username: <%= user.username %>
+            </p>
+          </div>
+          <div class="col-md-4">
+            <p class="card-text text-center fs-4">Email: <%= user.email %></p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <!-- Favorite Cities -->
-  <div class="card mb-4">
-    <div class="card-header">Favorite Cities</div>
-    <ul class="list-group list-group-flush">
-      <% user.favoriteCities.forEach(function(city) { %>
-      <li class="list-group-item"><%= city %></li>
-      <% }) %>
-    </ul>
-  </div>
-
-  <!-- Recommended Cities -->
-  <div class="card mb-4">
-    <div class="card-header">Recommended Cities</div>
-    <ul class="list-group list-group-flush">
-      <% recommendedCities.forEach(function(city) { %>
-      <li class="list-group-item"><%= city %></li>
-      <% }) %>
-    </ul>
-  </div>
-
-  <!-- Notifications -->
-  <div class="card mb-4">
-    <div class="card-header">Notifications</div>
-    <ul class="list-group list-group-flush">
-      <% user.notifications.forEach(function(notification) { %>
-      <li class="list-group-item"><%= notification %></li>
-      <% }) %>
-    </ul>
+    <!-- Four Sections -->
+    <div class="row">
+      <%- include('partials/dashboard-section', { title: 'Recent Activity',
+      items: user.recentPosts }) %> <%- include('partials/dashboard-section', {
+      title: 'Favorite Cities', items: user.favoriteCities }) %> <%-
+      include('partials/dashboard-section', { title: 'Recommended Cities',
+      items: recommendedCities }) %> <%- include('partials/dashboard-section', {
+      title: 'Notifications', items: user.notifications }) %>
+    </div>
   </div>
 </div>
