designing the city page

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -21,17 +21,19 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-4">
-            <p class="card-text text-center fs-4">
+            <p class="card-text text-center fs-4 user-info">
               Your Name: <%= user.firstName %> <%= user.lastName %>
             </p>
           </div>
           <div class="col-md-4">
-            <p class="card-text text-center fs-4">
+            <p class="card-text text-center fs-4 user-info">
               Username: <%= user.username %>
             </p>
           </div>
           <div class="col-md-4">
-            <p class="card-text text-center fs-4">Email: <%= user.email %></p>
+            <p class="card-text text-center fs-4 user-info">
+              Email: <%= user.email %>
+            </p>
           </div>
         </div>
       </div>
