--- a/views/showCity.ejs
+++ b/views/showCity.ejs
@@ -10,10 +10,8 @@
 
 <!-- Header Section -->
 <div class="container-fluid bg-light text-center py-5">
-  <% if (locals.success) { %>
-  <div class="alert alert-success"><%= success %></div>
-  <% } %> <% if (locals.error) { %>
-  <div class="alert alert-danger"><%= error %></div>
+  <% if (locals.success && locals.success.length > 0) { %>
+  <div class="alert alert-success"><%= success[0] %></div>
   <% } %>
 
   <div class="city-header">
